--- a/nginx-proxy/Dockerfile
+++ b/nginx-proxy/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:stable-alpine
 MAINTAINER Nklya <nklya@hotmail.com>
 
-LABEL   Name="proxy nginx"\
+LABEL   Name="nginx proxy"\
         Version="latest"
 
 COPY redmine.conf /etc/nginx/conf.d/default.conf
